Fix HTML video container height

--- a/style.css
+++ b/style.css
@@ -125,18 +125,21 @@
     border-radius: 0 0.5rem 0.5rem 0;
 }
 
+#mov2mov_mov,
 #mov2mov_mov video {
     height: 480px;
     max-height: 480px;
     min-height: 480px;
 }
 
+#mov2mov_video,
 #mov2mov_video video {
     height: 480px;
     max-height: 480px;
     min-height: 480px;
 }
 
+#modnet_background_movie,
 #modnet_background_movie video {
     height: 480px;
     max-height: 480px;
