--- a/style.css
+++ b/style.css
@@ -125,11 +125,24 @@
     border-radius: 0 0.5rem 0.5rem 0;
 }
 
-#mov2mov_mov {
-    height: 480px !important;
-    max-height: 480px !important;
-    min-height: 480px !important;
+#mov2mov_mov video {
+    height: 480px;
+    max-height: 480px;
+    min-height: 480px;
 }
+
+#mov2mov_video video {
+    height: 480px;
+    max-height: 480px;
+    min-height: 480px;
+}
+
+#mov2mov_video_frame img {
+    height: 480px;
+    max-height: 480px;
+    min-height: 480px;
+}
+
 
 
 #mov2mov_checkboxes {
